--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "aws-amplify": "^4.0.0",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongodb": "^3.6.6",
     "react": "^17.0.2",
