--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 SKIP_PREFLIGHT_CHECK=true
+REACT_APP_ENDPOINT=https://6nlpgi31df.execute-api.eu-central-1.amazonaws.com/default/trachkidEmailFunction
+config.js
