Added new endpoint for photos

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 SKIP_PREFLIGHT_CHECK=true
 REACT_APP_ENDPOINT=https://6nlpgi31df.execute-api.eu-central-1.amazonaws.com/default/trachkidEmailFunction
 config.js
+REACT_APP_PHOTOLINK=https://pvherreranotes.s3.amazonaws.com/private/us-east-1%3A080551fe-62d7-4ecc-8b43-588c50168820/
