--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@
 
 # misc
 .DS_Store
-.env
+/.env
 .env.development.local
 .env.test.local
 .env.production.local
@@ -24,3 +24,6 @@ yarn-error.log*
 
 # Local Netlify folder
 .netlify
+
+/Showconfig.js
+/Noteconfig.js
