--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 SKIP_PREFLIGHT_CHECK=true
 REACT_APP_ENDPOINT=https://6nlpgi31df.execute-api.eu-central-1.amazonaws.com/default/trachkidEmailFunction
 REACT_APP_PHOTOLINK=https://pvherreranotes.s3.amazonaws.com/private/us-east-1%3A080551fe-62d7-4ecc-8b43-588c50168820/
+REACT_APP_STORE=https://jvsh58oxcl.execute-api.us-east-1.amazonaws.com/dev/products
+REACT_APP_PRICES=https://u07r4zlgkk.execute-api.us-east-1.amazonaws.com/prod/prices
+REACT_APP_CDLINK=https://buy.stripe.com/00gbJ43ncdMj6886oo
