--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@aws-amplify/ui-react": "^1.2.1",
+    "@stripe/react-stripe-js": "^1.4.1",
+    "@stripe/stripe-js": "^1.15.0",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
@@ -11,18 +13,23 @@
     "aws-amplify-react": "^5.0.1",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
+    "bootstrap": "^5.0.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongodb": "^3.6.6",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
-    "react-bootstrap": "^1.4.0",
+    "react-aws-s3": "^1.5.0",
+    "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.2",
+    "react-fetch-hook": "^1.8.5",
     "react-icons": "^3.11.0",
     "react-iframe": "^1.8.0",
     "react-js-pagination": "^3.0.3",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-stripe-checkout": "^2.6.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
     "web-vitals": "^1.1.2"
