--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@aws-amplify/ui-react": "^1.2.1",
+    "@chec/commerce.js": "^2.8.0",
     "@stripe/react-stripe-js": "^1.4.1",
     "@stripe/stripe-js": "^1.15.0",
     "@testing-library/jest-dom": "^5.12.0",
@@ -26,12 +27,14 @@
     "react-icons": "^3.11.0",
     "react-iframe": "^1.8.0",
     "react-js-pagination": "^3.0.3",
+    "react-paginate": "^7.1.3",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-stripe-checkout": "^2.6.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
+    "string-strip-html": "^8.3.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
