--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "@chec/commerce.js": "^2.8.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@stripe/react-stripe-js": "^1.4.1",
-    "@stripe/stripe-js": "^1.15.0",
+    "@hookform/error-message": "^2.0.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@mui/material": "^5.0.0",
+    "@stripe/react-stripe-js": "^1.5.0",
+    "@stripe/stripe-js": "^1.18.0",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
@@ -19,24 +23,31 @@
     "bootstrap": "^5.0.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "formik": "^2.2.9",
     "mongodb": "^3.6.6",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-async-script-loader": "^0.3.0",
     "react-aws-s3": "^1.5.0",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.2",
     "react-fetch-hook": "^1.8.5",
+    "react-hook-form": "^6.8.6",
     "react-icons": "^3.11.0",
     "react-iframe": "^1.8.0",
     "react-js-pagination": "^3.0.3",
     "react-paginate": "^7.1.3",
+    "react-paypal-express-checkout": "^1.0.5",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-stripe-checkout": "^2.6.3",
+    "save": "^2.4.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
+    "square": "^14.1.0",
     "string-strip-html": "^8.3.0",
+    "stripe": "^8.176.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
