--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "array-sort-by": "^1.2.1",
     "aws-amplify": "^4.0.3",
     "aws-amplify-react": "^5.0.1",
     "axios": "^0.21.1",
@@ -24,19 +25,21 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "formik": "^2.2.9",
+    "lodash": "^4.17.21",
     "mongodb": "^3.6.6",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-async-script-loader": "^0.3.0",
     "react-aws-s3": "^1.5.0",
     "react-bootstrap": "^2.0.0-beta.4",
+    "react-data-components": "^1.2.0",
     "react-dom": "^17.0.2",
     "react-fetch-hook": "^1.8.5",
     "react-hook-form": "^6.8.6",
     "react-icons": "^3.11.0",
     "react-iframe": "^1.8.0",
     "react-js-pagination": "^3.0.3",
-    "react-paginate": "^7.1.3",
+    "react-paginate": "^7.1.5",
     "react-paypal-express-checkout": "^1.0.5",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
