--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "react-icons": "^3.11.0",
     "react-iframe": "^1.8.0",
     "react-js-pagination": "^3.0.3",
+    "react-native": "^0.67.3",
+    "react-native-linear-gradient": "^2.5.6",
     "react-paginate": "^7.1.5",
     "react-paypal-express-checkout": "^1.0.5",
     "react-router-bootstrap": "^0.25.0",
@@ -76,5 +78,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@serverless-stack/static-site-env": "^0.69.2"
   }
 }
