--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-aws-s3": "^1.5.0",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-data-components": "^1.2.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-fetch-hook": "^1.8.5",
     "react-hook-form": "^6.8.6",
@@ -43,6 +44,7 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-paginate": "^7.1.5",
     "react-paypal-express-checkout": "^1.0.5",
+    "react-responsive": "^9.0.0-beta.6",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
